fix: increased contrast for text color

--- a/ui/src/app/applications/components/application-details/application-details.scss
+++ b/ui/src/app/applications/components/application-details/application-details.scss
@@ -87,7 +87,7 @@ $header: 120px;
         top: 10px;
         width: 60px;
         line-height: 1;
-        color: $argo-color-gray-5;
+        color: $argo-color-gray-7;
         font-size: 0.8em;
     }
 
@@ -102,7 +102,7 @@ $header: 120px;
         white-space: nowrap;
         i {
             cursor: pointer;
-            color: $argo-color-gray-4;
+            color: $argo-color-gray-7;
             margin: 0 0.5em;
             &::before {
                 font-size: 1.5em;
@@ -110,7 +110,7 @@ $header: 120px;
         }
         i.selected {
             cursor: default;
-            color: $argo-color-gray-5;
+            color: $argo-color-gray-7;
         }
     }
 
@@ -131,7 +131,7 @@ $header: 120px;
 
         &.disabled {
             cursor: default !important;
-            color: $argo-color-gray-3 !important;
+            color: $argo-color-gray-7 !important;
         }
     }
 
